--- a/index.html
+++ b/index.html
@@ -13,26 +13,44 @@
     <script defer type="module" src="./views/index.js"></script>
   </head>
   <body>
-    <div class="header vertical-align">
-      <h1 class="page-title">
-        <img
-          src="https://image7.coupangcdn.com/image/coupang/common/logo_coupang_w350.png"
-          alt="coupang-logo"
-        />
-      </h1>
-      <div class="search-form vertical-align">
-        <div class="search-category space-between">
-          <p>전체</p>
-          <button class="search-category__btn"><i class="fas fa-caret-down"></i></button>
-        </div>
-        <div class="search-keyword">
-          <form>
-            <input class="search-keyword__input" type="text" placeholder="찾고 싶은 상품을 검색해보세요!" />
-          </form>
-          <button class="search-keyword__voice"><i class="fas fa-microphone"></i></button>
-          <button class="search-keyword__btn"><i class="fas fa-search"></i></button>
+    <header>
+      <div class="search-banner vertical-align">
+        <h1 class="page-title">
+          <img
+            src="https://image7.coupangcdn.com/image/coupang/common/logo_coupang_w350.png"
+            alt="coupang-logo"
+          />
+        </h1>
+        <div class="search-form">
+          <div class="search-bar vertical-align">
+            <div class="search-category space-between">
+              <p>전체</p>
+              <button class="search-category__btn"><i class="fas fa-caret-down"></i></button>
+            </div>
+            <div class="search-keyword">
+              <form>
+                <input
+                  class="search-keyword__input"
+                  type="text"
+                  placeholder="찾고 싶은 상품을 검색해보세요!"
+                />
+              </form>
+              <button class="search-keyword__voice"><i class="fas fa-microphone"></i></button>
+              <button class="search-keyword__btn"><i class="fas fa-search"></i></button>
+            </div>
+          </div>
+          <div class="history-keyword">
+            <div class="history-keyword--contents box">
+              <p class="history-keyword--contents__title">최근 검색어</p>
+              <div class="history-keyword--contents__keywords"></div>
+            </div>
+            <div class="history-keyword--controller space-between box">
+              <button>전체삭제</button>
+              <button>최근검색어끄기</button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    </header>
   </body>
 </html>
