--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="search-banner vertical-align">
+      <div class="search-banner">
         <h1 class="page-title">
           <img
             src="https://image7.coupangcdn.com/image/coupang/common/logo_coupang_w350.png"
@@ -22,8 +22,8 @@
           />
         </h1>
         <div class="search-form">
-          <div class="search-bar vertical-align">
-            <div class="search-category space-between">
+          <div class="search-bar">
+            <div class="search-category">
               <p>전체</p>
               <button class="search-category__btn"><i class="fas fa-caret-down"></i></button>
             </div>
@@ -40,13 +40,13 @@
             </div>
           </div>
           <div class="history-keyword hidden">
-            <div class="history-keyword--contents box">
+            <div class="history-keyword--contents">
               <p class="history-keyword--contents__title">최근 검색어</p>
               <div class="history-keyword--contents__keywords">
                 <ul class="history-keyword--contents__list"></ul>
               </div>
             </div>
-            <div class="history-keyword--controller space-between box">
+            <div class="history-keyword--controller space-between">
               <button>전체삭제</button>
               <button>최근검색어끄기</button>
             </div>
