--- a/index.html
+++ b/index.html
@@ -39,16 +39,19 @@
               <button class="search-keyword__btn"><i class="fas fa-search"></i></button>
             </div>
           </div>
-          <div class="history-keyword hidden">
-            <div class="history-keyword--contents">
+          <div class="history-keyword">
+            <div class="history-keyword--contents hidden">
               <p class="history-keyword--contents__title">최근 검색어</p>
               <div class="history-keyword--contents__keywords">
                 <ul class="history-keyword--contents__list"></ul>
               </div>
             </div>
-            <div class="history-keyword--controller space-between">
-              <button>전체삭제</button>
-              <button>최근검색어끄기</button>
+            <div class="history-keyword__off hidden">
+              <p>최근 검색어 저장 기능이 꺼져 있습니다.</p>
+            </div>
+            <div class="history-keyword--controller hidden">
+              <button data-command="delete">전체삭제</button>
+              <button data-command="off">최근검색어끄기</button>
             </div>
           </div>
         </div>
