feat: 최근검색어끄기 기능 추가, refactor: 변수명 수정

--- a/index.html
+++ b/index.html
@@ -27,29 +27,29 @@
               <p>전체</p>
               <button class="search-category__btn"><i class="fas fa-caret-down"></i></button>
             </div>
-            <div class="search-keyword">
-              <form class="search-keyword__input">
+            <div class="search-box">
+              <form class="search-box__input">
                 <input
-                  class="search-keyword__input-text"
+                  class="search-box__input-text"
                   type="text"
                   placeholder="찾고 싶은 상품을 검색해보세요!"
                 />
               </form>
-              <button class="search-keyword__voice"><i class="fas fa-microphone"></i></button>
-              <button class="search-keyword__btn"><i class="fas fa-search"></i></button>
+              <button class="search-box__voice"><i class="fas fa-microphone"></i></button>
+              <button class="search-box__btn"><i class="fas fa-search"></i></button>
             </div>
           </div>
-          <div class="history-keyword">
-            <div class="history-keyword--contents hidden">
-              <p class="history-keyword--contents__title">최근 검색어</p>
-              <div class="history-keyword--contents__keywords">
-                <ul class="history-keyword--contents__list"></ul>
+          <div class="recent-search-box">
+            <div class="recent-search-box--contents hidden">
+              <p class="recent-search-box--contents__title">최근 검색어</p>
+              <div class="recent-search-box--contents__keywords">
+                <ul class="recent-search-box--contents__list"></ul>
               </div>
             </div>
-            <div class="history-keyword__off hidden">
+            <div class="recent-search-box__off hidden">
               <p>최근 검색어 저장 기능이 꺼져 있습니다.</p>
             </div>
-            <div class="history-keyword--controller hidden">
+            <div class="recent-search-box--controller hidden">
               <button data-command="delete">전체삭제</button>
               <button data-command="off">최근검색어끄기</button>
             </div>
