--- a/index.html
+++ b/index.html
@@ -39,19 +39,26 @@
               <button class="search-box__btn"><i class="fas fa-search"></i></button>
             </div>
           </div>
-          <div class="recent-search-box">
-            <div class="recent-search-box--contents hidden">
-              <p class="recent-search-box--contents__title">최근 검색어</p>
-              <div class="recent-search-box--contents__keywords">
-                <ul class="recent-search-box--contents__list"></ul>
+          <div class="search-helper-box">
+            <div class="recent-search-box">
+              <div class="recent-search-box__contents hidden">
+                <p class="recent-search-box__contents__title">최근 검색어</p>
+                <div class="recent-search-box__contents__keywords">
+                  <ul class="recent-search-box__contents__list"></ul>
+                </div>
+              </div>
+              <div class="recent-search-box__off hidden">
+                <p>최근 검색어 저장 기능이 꺼져 있습니다.</p>
+              </div>
+              <div class="recent-search-box--controller hidden">
+                <button class="deleteBtn" data-command="delete">전체삭제</button>
+                <button class="saveBtn" data-command="off">최근검색어끄기</button>
               </div>
             </div>
-            <div class="recent-search-box__off hidden">
-              <p>최근 검색어 저장 기능이 꺼져 있습니다.</p>
-            </div>
-            <div class="recent-search-box--controller hidden">
-              <button data-command="delete">전체삭제</button>
-              <button data-command="off">최근검색어끄기</button>
+            <div class="auto-completion-box hidden">
+              <div class="auto-completion-box__contents">
+                <ul class="auto-completion-box__contents__list"></ul>
+              </div>
             </div>
           </div>
         </div>
