feat: 카테고리 박스로 옵션을 선택하는 기능 구현

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </h1>
         <div class="search-form">
           <div class="search-bar">
-            <div class="search-category">
+            <div class="search-category-box">
               <p>전체</p>
-              <button class="search-category__btn"><i class="fas fa-caret-down"></i></button>
+              <button class="search-category-box__btn"><i class="fas fa-caret-down"></i></button>
             </div>
             <div class="search-box">
               <form class="search-box__input">
@@ -58,6 +58,43 @@
             <div class="auto-completion-box hidden">
               <div class="auto-completion-box__contents">
                 <ul class="auto-completion-box__contents__list"></ul>
+              </div>
+            </div>
+            <div class="category-option-box hidden">
+              <div class="category-option-box__contents">
+                <ul class="category-option-box__contents__list">
+                  <li data-value="전체">전체</li>
+                  <li data-value="여성패션">여성패션</li>
+                  <li data-value="남성패션">남성패션</li>
+                  <li data-value="남녀 공용 의류">남녀 공용 의류</li>
+                  <li data-value="유아동패션">유아동패션</li>
+                  <li data-value="뷰티">뷰티</li>
+                  <li data-value="출산/유아동">출산/유아동</li>
+                  <li data-value="식품">식품</li>
+                  <li data-value="주방용품">주방용품</li>
+                  <li data-value="생활용품">생활용품</li>
+                  <li data-value="홈인테리어">홈인테리어</li>
+                  <li data-value="가전디지털">가전디지털</li>
+                  <li data-value="스포츠/레저">스포츠/레저</li>
+                  <li data-value="자동차용품">자동차용품</li>
+                  <li data-value="도서/음반/DVD">도서/음반/DVD</li>
+                  <li data-value="완구/취미">완구/취미</li>
+                  <li data-value="문구/오피스">문구/오피스</li>
+                  <li data-value="반려동물용품">반려동물용품</li>
+                  <li data-value="헬스/건강식품">헬스/건강식품</li>
+                  <li data-value="국내여행">국내여행</li>
+                  <li data-value="해외여행">해외여행</li>
+                  <li data-value="로켓설치">로켓설치</li>
+                  <li data-value="공간별 집꾸미기">공간별 집꾸미기</li>
+                  <li data-value="헬스케어 전문관">헬스케어 전문관</li>
+                  <li data-value="쿠팡 Only">쿠팡 Only</li>
+                  <li data-value="싱글라이프">싱글라이프</li>
+                  <li data-value="악기전문관">악기전문관</li>
+                  <li data-value="결혼준비">결혼준비</li>
+                  <li data-value="아트/공예">아트/공예</li>
+                  <li data-value="홈카페">홈카페</li>
+                  <li data-value="실버스토어">실버스토어</li>
+                </ul>
               </div>
             </div>
           </div>
