--- a/client/index.html
+++ b/client/index.html
@@ -10,29 +10,9 @@
     />
     <link rel="stylesheet" href="./styles/css/style.css" />
     <title>Document</title>
-    <script defer type="module" src="./js/index.js"></script>
+    <script defer type="module" src="./js/app.js"></script>
   </head>
   <body>
-    <header>
-      <div class="search-banner">
-        <h1 class="page-title">
-          <img
-            src="https://image7.coupangcdn.com/image/coupang/common/logo_coupang_w350.png"
-            alt="coupang-logo"
-          />
-        </h1>
-        <div class="search-form">
-          <div class="search-bar">
-            <div class="category-box"></div>
-            <div class="search-box"></div>
-          </div>
-          <div class="search-helper-box">
-            <div class="recent-search-box"></div>
-            <div class="auto-completion-box hidden"></div>
-            <div class="category-option-box hidden"></div>
-          </div>
-        </div>
-      </div>
-    </header>
+    <div id="app"></div>
   </body>
 </html>
