--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/css/style.css" />
+    <link rel="stylesheet" href="./client/styles/css/style.css" />
     <title>Document</title>
-    <script defer type="module" src="./js/app.js"></script>
+    <script defer type="module" src="./client/js/app.js"></script>
   </head>
   <body>
     <div id="app"></div>
